docker with enumhyp for generate and enumerate.